--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>simple Index</title>
 </head>
 <body>
-    <a href="jsonpath">jsonpath</a><br>
+    <a href='jsonpath'>jsonpath</a><br>
 </body>
 </html>
