--- a/jsonpath/index.html
+++ b/jsonpath/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>certifi Index</title>
+    <title>jsonpath Index</title>
 </head>
 <body>
-    <a href="jsonpath-0.82.2-py3-none-any.whl">jsonpath-0.82.2-py3-none-any.whl</a><br>
+    <a href='jsonpath-0.82.2-py3-none-any.whl'>jsonpath-0.82.2-py3-none-any.whl</a><br>
 </body>
 </html>
