add pip, setuptools

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <a href='idna'>idna</a><br>
     <a href='jsonpath'>jsonpath</a><br>
     <a href='multidict'>multidict</a><br>
+    <a href='pip'>pip</a><br>
     <a href='propcache'>propcache</a><br>
+    <a href='setuptools'>setuptools</a><br>
     <a href='yarl'>yarl</a><br>
 </body>
 </html>
