--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <a href='idna'>idna</a><br>
     <a href='jsonpath'>jsonpath</a><br>
     <a href='multidict'>multidict</a><br>
+    <a href='numpy'>numpy</a><br>
     <a href='pip'>pip</a><br>
     <a href='propcache'>propcache</a><br>
+    <a href='regex'>regex</a><br>
     <a href='setuptools'>setuptools</a><br>
+    <a href='wheel'>wheel</a><br>
     <a href='yarl'>yarl</a><br>
 </body>
 </html>
