--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href='frozenlist'>frozenlist</a><br>
     <a href='idna'>idna</a><br>
     <a href='jsonpath'>jsonpath</a><br>
+    <a href='lxml'>lxml</a><br>
     <a href='multidict'>multidict</a><br>
     <a href='numpy'>numpy</a><br>
     <a href='pip'>pip</a><br>
