--- a/regex/index.html
+++ b/regex/index.html
@@ -4,6 +4,8 @@
     <title>regex Index</title>
 </head>
 <body>
+    <a href='regex-2023.12.25-cp310-cp310-linux_aarch64.whl'>regex-2023.12.25-cp310-cp310-linux_aarch64.whl</a><br>
+    <a href='regex-2023.12.25-cp312-cp312-linux_aarch64.whl'>regex-2023.12.25-cp312-cp312-linux_aarch64.whl</a><br>
     <a href='regex-2024.11.6-cp312-cp312-linux_aarch64.whl'>regex-2024.11.6-cp312-cp312-linux_aarch64.whl</a><br>
     <a href='regex-2024.11.6-cp39-cp39-linux_aarch64.whl'>regex-2024.11.6-cp39-cp39-linux_aarch64.whl</a><br>
     <a href='regex-2024.11.6.tar.gz'>regex-2024.11.6.tar.gz</a><br>
