--- a/aiohttp/index.html
+++ b/aiohttp/index.html
@@ -5,5 +5,9 @@
 </head>
 <body>
     <a href='aiohttp-3.10.11-cp312-cp312-linux_aarch64.whl'>aiohttp-3.10.11-cp312-cp312-linux_aarch64.whl</a><br>
+    <a href='aiohttp-3.11.12-cp39-cp39-linux_aarch64.whl'>aiohttp-3.11.12-cp39-cp39-linux_aarch64.whl</a><br>
+    <a href='aiohttp-3.9.3-cp310-cp310-linux_aarch64.whl'>aiohttp-3.9.3-cp310-cp310-linux_aarch64.whl</a><br>
+    <a href='aiohttp-3.9.3-cp312-cp312-linux_aarch64.whl'>aiohttp-3.9.3-cp312-cp312-linux_aarch64.whl</a><br>
+    <a href='aiohttp-3.9.5-cp311-cp311-linux_aarch64.whl'>aiohttp-3.9.5-cp311-cp311-linux_aarch64.whl</a><br>
 </body>
 </html>
