--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href='numpy'>numpy</a><br>
     <a href='pip'>pip</a><br>
     <a href='propcache'>propcache</a><br>
+    <a href='pycryptodome'>pycryptodome</a><br>
     <a href='regex'>regex</a><br>
     <a href='setuptools'>setuptools</a><br>
     <a href='wheel'>wheel</a><br>
