--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href='pip'>pip</a><br>
     <a href='propcache'>propcache</a><br>
     <a href='pycryptodome'>pycryptodome</a><br>
+    <a href='pyyaml'>pyyaml</a><br>
     <a href='regex'>regex</a><br>
     <a href='setuptools'>setuptools</a><br>
     <a href='wheel'>wheel</a><br>
