--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <a href='aiohappyeyeballs'>aiohappyeyeballs</a><br>
     <a href='aiohttp'>aiohttp</a><br>
     <a href='aiosignal'>aiosignal</a><br>
+    <a href='argcomplete'>argcomplete</a><br>
     <a href='attrs'>attrs</a><br>
+    <a href='certifi'>certifi</a><br>
+    <a href='charset-normalizer'>charset-normalizer</a><br>
     <a href='frozenlist'>frozenlist</a><br>
     <a href='idna'>idna</a><br>
     <a href='jsonpath'>jsonpath</a><br>
+    <a href='looseversion'>looseversion</a><br>
     <a href='lxml'>lxml</a><br>
     <a href='multidict'>multidict</a><br>
     <a href='numpy'>numpy</a><br>
@@ -19,7 +23,10 @@
     <a href='pycryptodome'>pycryptodome</a><br>
     <a href='pyyaml'>pyyaml</a><br>
     <a href='regex'>regex</a><br>
+    <a href='requests'>requests</a><br>
+    <a href='sdkmanager'>sdkmanager</a><br>
     <a href='setuptools'>setuptools</a><br>
+    <a href='urllib3'>urllib3</a><br>
     <a href='wheel'>wheel</a><br>
     <a href='yarl'>yarl</a><br>
 </body>
