--- a/lxml/index.html
+++ b/lxml/index.html
@@ -6,5 +6,6 @@
 <body>
     <a href='lxml-5.2.1-cp311-cp311-linux_aarch64.whl'>lxml-5.2.1-cp311-cp311-linux_aarch64.whl</a><br>
     <a href='lxml-5.3.0-cp312-cp312-linux_aarch64.whl'>lxml-5.3.0-cp312-cp312-linux_aarch64.whl</a><br>
+    <a href='lxml-5.3.1-cp312-cp312-linux_aarch64.whl'>lxml-5.3.1-cp312-cp312-linux_aarch64.whl</a><br>
 </body>
 </html>
